LinkedIn: Fix missing dependencies

--- a/src/Skybrud.Social.Umbraco/Skybrud.Social.Umbraco.csproj
+++ b/src/Skybrud.Social.Umbraco/Skybrud.Social.Umbraco.csproj
@@ -127,6 +127,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Skybrud.Social.0.9.1.1\lib\Skybrud.Social.dll</HintPath>
     </Reference>
+    <Reference Include="Skybrud.Social.LinkedIn, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\_lib\Skybrud.Social.LinkedIn.dll</HintPath>
+    </Reference>
     <Reference Include="SQLCE4Umbraco, Version=1.0.5462.37514, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\UmbracoCms.Core.7.2.1\lib\SQLCE4Umbraco.dll</HintPath>
